<resources>
    <string name="app_name" translatable="false">Open IKSU</string>
    <string name="app_name_1" translatable="false">Open</string>
    <string name="app_name_2" translatable="false">IKSU</string>
    <string name="app_current_release" translatable="false">@string/release_b</string>
    <string name="developer_name" translatable="false">Karl Lindmark</string>
    <string name="developer_email" translatable="false">support@ninetwozero.com</string>
    <string name="developer_title">App Developer</string>
    <string name="developer_project" translatable="false">ninetwozero/iksu-android</string>
    <string name="empty" translatable="false"></string>
    <string name="dummy_name" translatable="false">Dalton Hobbes</string>
    <string name="dummy_email" translatable="false">dalton.hobbes@ntz.re</string>
    <string name="dummy_link_name">Dig in to the code on Github</string>
    <string name="dummy_link_url" translatable="false">https://github.com/ninetwozero/iksu-android</string>
    <string name="dummy_link_subtitle">iksu-android on Github</string>
    <string name="todo" translatable="false">TODO</string>

    <!-- Release names -->
    <string name="release_a">The Abdominal release</string>
    <string name="release_b">The Biceps release</string>

    <!-- Labels -->
    <string name="label_full">No slots left</string>
    <string name="label_dropin">Drop in</string>
    <string name="label_workouts">Classes</string>
    <string name="label_reserved">Signed up</string>
    <string name="label_reserve">Sign up</string>
    <string name="label_login_activity">Sign in to IKSU</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_accept_tos">I have read and accept the terms of service</string>
    <string name="label_password">Password</string>
    <string name="label_email">E-mail address</string>
    <string name="label_reservations">My reservations</string>
    <string name="label_settings">Settings</string>
    <string name="label_support">Need help?</string>
    <string name="label_not_signed_in">Not signed in</string>
    <string name="label_tap_to_sign_in">Tap here to sign in</string>
    <string name="label_cancel_reservation">Yes, cancel reservation</string>
    <string name="label_instructor_unknown">Instructor unknown</string>
    <string name="label_about_the_class">About the class</string>
    <string name="label_similar_sessions">Similar sessions during the day</string>
    <string name="label_no">No</string>
    <string name="label_info">Info</string>
    <string name="label_filter">Filter</string>
    <string name="label_add_account">Add account</string>
    <string name="label_manage_accounts">Manage accounts</string>
    <string name="label_clear_filters">Clear filters on this page</string>
    <string name="label_categories">Categories</string>
    <string name="label_facilities">Facilities</string>
    <string name="label_instructors">Instructors</string>
    <string name="label_today">Today</string>
    <string name="label_tomorrow">Tomorrow</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_accept">Accept</string>
    <string name="label_tos">Terms of Service</string>
    <string name="label_send_information">Send information</string>
    <string name="label_open_settings">Open settings</string>
    <string name="label_unsupported_device">Unsupported device</string>
    <string name="label_upcoming">Upcoming</string>
    <string name="label_past">Past</string>
    <string name="label_untranslated">Untranslated</string>
    <string name="label_sign_out_title">Sign out from %1$s?</string>
    <string name="label_sign_out">Sign out</string>
    <string name="label_about">About</string>
    <string name="label_created_by">Created by</string>
    <string name="label_about_app">App</string>
    <string name="label_about_links">Links</string>
    <string name="label_unknown_version">Unknown version</string>
    <string name="label_about_dependencies">Open Source</string>
    <string name="label_the_x_release">The %1$s release:</string>
    <string name="label_close">Close</string>
    <string name="label_share">Share</string>
    <string name="label_changelog">Changelog</string>
    <string name="label_rate_the_app">Rate the app on Google Play</string>
    <string name="label_kill_session">Kill session</string>
    <string name="label_debug">Debug</string>
    <string name="label_debug_reset_token">Reset API token</string>
    <string name="label_class_started">The class has already started</string>
    <string name="label_filter_toggle">Toggle filters on/off</string>
    <string name="label_manage_filters">Manage filters…</string>
    <string name="label_debug_test_notifications">Test notifications</string>
    <string name="label_notification_line_text">%1$s: %2$s (%3$s)</string>
    <string name="label_monitor_q">Monitor?</string>
    <string name="label_monitoring">Monitoring</string>
    <string name="label_checked_in">Checked in</string>
    <string name="label_check_in_q">Check in?</string>
    <string name="label_notification_slots_available">Slots available at IKSU</string>
    <string name="label_monitored_workouts">Monitored workouts</string>
    <string name="label_debug_test_checkin">Test check-in</string>
    <string name="label_debug_test_monitoring">Test monitoring</string>
    <string name="label_class_ended">The class has already finished</string>

    <!-- Messages -->
    <string name="msg_loading_workouts">Loading classes</string>
    <string name="msg_no_workouts">There are no classes right now</string>
    <string name="msg_sign_in_dialog_title">Sign in?</string>
    <string name="msg_sign_in_dialog_content">You need to be signed in to be able to reserve a spot. Sign in now?</string>
    <string name="msg_reserve_dialog_title">Sign up for this class?</string>
    <string name="msg_reserve_dialog_content">Friendly reminder: Don\'t forget to check-in at least 5 minutes prior to the class to avoid extra fees.</string>
    <string name="msg_error_empty_username">Empty e-mail address</string>
    <string name="msg_error_invalid_username">Invalid e-mail address</string>
    <string name="msg_error_empty_password">Empty password</string>
    <string name="msg_error_invalid_password">Password too short</string>
    <string name="msg_login_error">Incorrect username and password combination</string>
    <string name="msg_general_error">An error occurred while talking to IKSU</string>
    <string name="msg_unable_to_reserve_dropin">Drop-in tickets are available in the reception area</string>
    <string name="msg_cancel_reservation_dialog_title">Cancel reservation?</string>
    <string name="msg_cancel_reservation_dialog_error_1">Unable to cancel your reservation</string>
    <string name="msg_cancel_reservation_dialog_error_2">Try the IKSU website?</string>
    <string name="msg_no_other_sessions_for_workout">No other sessions today :(</string>
    <string name="msg_reservation_completed">You\'re all set!</string>
    <string name="msg_cancel_reservation_ok">You\'ve canceled your reservation!</string>
    <string name="msg_reservation_error">You don\'t seem to have access to this session</string>
    <string name="msg_signed_in_as_x">Signed in as %1$s</string>
    <string name="msg_sign_in_failed">Sign-in attempt failed</string>
    <string name="msg_unable_to_reserve_full">The current session is full</string>
    <string name="msg_no_workouts_with_filter">There are no classes right now matching your filters</string>
    <string name="msg_no_reservations">No reservations found. That\'s OK!</string>
    <string name="msg_tos">By using this login you acknowledge that your password will be stored encrypted on your device so that the app can keep itself logged in towards the IKSU website.</string>
    <string name="msg_error_accept_tos_first">Sorry, you need to accept the terms of service :(</string>
    <string name="msg_unsupported_device_info">The app has detected an issue that will prevent it from storing your password safely.\n\nReport this so that we can look into it?</string>
    <string name="msg_no_internet">You\'re not connected to the internet</string>
    <string name="msg_errors_found">Errors found :(</string>
    <string name="msg_login_started">Signing in</string>
    <string name="msg_login_ok_preparing">Preparing the app</string>
    <string name="msg_login_done">All set</string>
    <string name="msg_about_send_email">Send us an e-mail</string>
    <string name="msg_about_github">Help us out on Github</string>
    <string name="msg_no_accounts">No accounts found - add one?</string>
    <string name="msg_workout_not_found">Class could not be found</string>
    <string name="msg_downloading_workout">Downloading class...</string>
    <string name="msg_login_error_blocked">Your IKSU account seems to be locked.</string>
    <string name="msg_account_disabled">Account \'%1$s\' has been disabled</string>
    <string name="msg_activating_devmode">Activating developer mode</string>
    <string name="msg_location_permission_rationale">This app needs to access your location to determine if you\'re currently at an IKSU facility</string>
    <string name="msg_already_checkedin">You\'ve already checked in</string>
    <string name="msg_checkin_failed">Unable to check-in - are you really at %1$s?</string>
    <string name="msg_error_no_gps">Unable to figure out where you are</string>
    <string name="msg_checkin_ok">Checked-in!</string>
    <string name="msg_error_general">An unknown error occurred</string>
    <string name="msg_error_not_logged_in">You\'re not logged in</string>
    <string name="msg_error_checkin_failed">Too early to check-in</string>
    <string name="msg_error_already_checkedin">Already checked-in</string>
    <string name="msg_error_iksu_backend">IKSU is down :(</string>
    <string name="msg_error_card_locked">Your card is locked :(</string>
    <string name="msg_no_monitored_workouts">You aren\'t monitoring any workouts</string>
    <string name="msg_x_more">+%1$d more</string>


    <!-- Content descriptions -->
    <string name="cdesc_avatar">User avatar</string>
    <string name="cdesc_status_icon">Status icon</string>

    <!-- Misc -->
    <string name="facility_sport" translatable="false">IKSU Sport</string>
    <string name="facility_spa" translatable="false">IKSU Spa</string>
    <string name="facility_plus" translatable="false">IKSU Plus</string>
    <string name="facility_unknown">Unknown facility</string>
    <string name="random_drumroll">*drumroll*</string>
    <string name="x_by_y">%1$s by %2$s</string>

    <string name="notification_channel_name">Monitored workouts</string>
    <string name="notification_channel_labels">Used to notify you about available spots on monitored workouts</string>

    <plurals name="msg_x_filters_activated">
        <item quantity="zero">%d filters activated</item>
        <item quantity="one">%d filter activated</item>
        <item quantity="other">%d filters activated</item>
    </plurals>
</resources>
