<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/default_primary" android:checkableBehavior="single" android:menuCategory="container" android:orderInCategory="0">
        <item
            android:id="@+id/menu_reservations"
            android:title="@string/label_reservations"
            android:icon="@drawable/ic_schedule_black_24dp"
            />
        <item
            android:id="@+id/menu_all_classes"
            android:title="@string/label_workouts"
            android:icon="@drawable/ic_event_black_24dp"
            android:checked="true"
        />
        <item
            android:id="@+id/menu_monitored_classes"
            android:title="@string/label_monitored_workouts"
            android:icon="@drawable/ic_notifications_black_24dp"
        />
    </group>
    <group android:id="@+id/default_secondary" android:checkableBehavior="single" android:menuCategory="container" android:orderInCategory="1">
        <item
            android:id="@+id/menu_about"
            android:title="@string/label_about"
            android:icon="@drawable/ic_info_black_24dp"
            />
        <item
            android:id="@+id/menu_debug"
            android:title="@string/label_debug"
            android:icon="@drawable/ic_hot_tub_black_24dp"
            android:visible="false"
        />
    </group>
    <group android:id="@+id/account_list" android:checkableBehavior="single" android:visible="false" android:orderInCategory="0" android:menuCategory="alternative">
    </group>
    <group android:id="@+id/acccount_actions" android:checkableBehavior="single" android:visible="false" android:orderInCategory="1" android:menuCategory="alternative">
        <item
            android:id="@+id/add_account"
            android:title="@string/label_add_account"
            android:icon="@drawable/ic_add_circle_black_24dp"
            />
        <item
            android:id="@+id/manage_accounts"
            android:title="@string/label_manage_accounts"
            android:icon="@drawable/ic_settings_black_24dp"
            />

        <item
            android:id="@+id/kill_session"
            android:title="@string/label_kill_session"
            android:icon="@drawable/ic_hot_tub_black_24dp"
            android:visible="false"
        >
        </item>
    </group>
</menu>
