<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <item
        android:id="@+id/menu_test_checkin"
        android:title="@string/label_debug_test_checkin"
        android:icon="@drawable/ic_hot_tub_black_24dp"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/menu_test_notifications"
        android:title="@string/label_debug_test_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        app:showAsAction="withText"
        />
    <item
        android:id="@+id/menu_reset_api_token"
        android:title="@string/label_debug_reset_token"
        android:icon="@drawable/ic_remove_circle_black_24dp"
        app:showAsAction="withText"
        />
</menu>