<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_drawer_header_height"
    android:background="@color/colorAccentLight"
    android:padding="@dimen/spacing_double"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/navigation_drawer_main_avatar_size"
        android:layout_height="@dimen/navigation_drawer_main_avatar_size"
        android:contentDescription="@string/cdesc_avatar"
        app:srcCompat="@drawable/ic_fitness_center_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:tint="@color/colorAccent"
        />
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/dummy_email"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/username"
        android:layout_marginTop="@dimen/spacing_double"
        android:textAppearance="@style/TextAppearance.AppCompat"
        tools:text="@string/dummy_name"
    />

    <ImageView
        android:id="@+id/indicator"
        android:layout_width="@dimen/header_main_navigation_indicator_size"
        android:layout_height="@dimen/header_main_navigation_indicator_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
        android:contentDescription="@string/empty"
        android:alpha="0.8"/>
</android.support.constraint.ConstraintLayout>