<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <android.support.constraint.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="@dimen/spacing_double"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="16dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="@dimen/spacing_double"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="344dp"
        />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="64sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
    />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrap_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAF8F8F8"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_email"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrap_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/wrap_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/spacing_default"
        android:textColorHint="#AAF8F8F8"
        android:layout_marginStart="@dimen/spacing_double"
        android:layout_marginEnd="@dimen/spacing_double"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"
        />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_accept_tos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/wrap_password"
        android:layout_marginTop="@dimen/spacing_default"
        app:buttonTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        />

    <TextView
        android:id="@+id/tos_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/wrap_password"
        app:layout_constraintLeft_toRightOf="@+id/checkbox_accept_tos"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_accept_tos"
        android:text="@string/label_accept_tos"
        android:textColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/button_login"
        android:textColor="#FFFFFF"
        android:padding="@dimen/spacing_double"

        android:text="@string/label_sign_in"
        android:gravity="center"
        android:textSize="@dimen/text_size_title"
        android:textAllCaps="true"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/state_loading_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">
        <ProgressBar
            style="?attr/indeterminateProgressStyle"
            android:id="@+id/empty_progress"
            android:layout_width="@dimen/empty_icon_size"
            android:layout_height="@dimen/empty_icon_size"
            />
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_login_started"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_double"
            android:textColor="@color/white"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>