<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >

    <data>
        <import type="android.view.View"/>
        <variable name="account" type="com.ninetwozero.iksu.models.UserAccount" />
        <variable name="handler" type="com.ninetwozero.iksu.features.accounts.AccountListCallbacks" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:theme="@style/Theme.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_twoline_height"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/spacing_double"
        android:onClick="@{(view) -> handler.onAccountClick(account)}"
        android:longClickable="true"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/account_list_avatar_size"
            android:layout_height="@dimen/account_list_avatar_size"
            app:srcCompat="@drawable/ic_account_circle_black_24dp"
            android:contentDescription="@string/cdesc_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{!account.disabled}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:checked="true"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{account.name}"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_marginStart="@dimen/spacing_double"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintEnd_toEndOf="@id/enabled"
            tools:text="@string/dummy_name"
            />


        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{account.username}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginStart="@dimen/spacing_double"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintEnd_toEndOf="@id/enabled"
            tools:text="@string/dummy_email"
            />
    </android.support.constraint.ConstraintLayout>
</layout>